<resources>
    <string name="app_name">Tims Contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_about_app">About App</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_add_img">Add Image</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_cancel">Cancel</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_prompt_yes">Yes</string>
    <string name="text_prompt_no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>