<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.timscontact.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.timscontact.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.timscontact.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.timscontact.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts"/>
    <fragment
        android:id="@+id/nav_about_app"
        android:name="com.example.timscontact.ui.aboutapp.AboutAppFragment"
        android:label="@string/menu_about_app"
        tools:layout="@layout/fragment_about_app"/>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.timscontact.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout"/>
    <fragment
        android:id="@+id/nav_add_contact"
        android:name="com.example.timscontact.ui.addcontact.AddContactFragment"
        android:label="@string/menu_add_contact"
        tools:layout="@layout/fragment_add_contact"/>

</navigation>